package idgs.store.pb;

option java_outer_classname = "PbStoreSync";


message SyncStoreRequest {
  required string store_name = 1;
  optional uint32 paritition = 2;
}

message SyncStoreData {
  required bytes key = 1;
  required bytes value = 2;
}

message SyncStore {
  required string store_name = 1;
  repeated SyncStoreData data = 2;
}